--- a/MPPhotoSlideshowCommon/MPPhotoSlideshowCommon.csproj
+++ b/MPPhotoSlideshowCommon/MPPhotoSlideshowCommon.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -43,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BuiltInTemplates.cs" />
     <Compile Include="ExifMetadata.cs" />
     <Compile Include="ImageControl.cs" />
     <Compile Include="InputBox.cs">
@@ -54,6 +57,7 @@
     <Compile Include="LabelControl.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="PhotoControl.cs" />
+    <Compile Include="Templates.cs" />
     <Compile Include="PhotoTemplate.cs" />
     <Compile Include="Picture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -63,10 +67,14 @@
     <Compile Include="SetupForm.Designer.cs">
       <DependentUpon>SetupForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModuleVersion.cs" />
     <Compile Include="XMLHelper.cs" />
     <Compile Include="XMLSettings.cs" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="InputBox.resx">
+      <DependentUpon>InputBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SetupForm.resx">
       <DependentUpon>SetupForm.cs</DependentUpon>
     </EmbeddedResource>
