--- a/MPPhotoSlideshow2/MPPhotoSlideshow2.csproj
+++ b/MPPhotoSlideshow2/MPPhotoSlideshow2.csproj
@@ -33,8 +33,9 @@
     <Reference Include="MediaPortal.Common">
       <HintPath>..\..\..\Program Files (x86)\Team MediaPortal\MP2-Client\MediaPortal.Common.dll</HintPath>
     </Reference>
-    <Reference Include="MediaPortal.UI">
-      <HintPath>..\..\..\Program Files (x86)\Team MediaPortal\MP2-Client\MediaPortal.UI.dll</HintPath>
+    <Reference Include="MediaPortal.UI, Version=2.0.0.1309, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Program Files (x86)\Team MediaPortal\MP2-Client\MediaPortal.UI.dll</HintPath>
     </Reference>
     <Reference Include="MediaPortal.Utilities">
       <HintPath>..\..\..\Program Files (x86)\Team MediaPortal\MP2-Client\MediaPortal.Utilities.dll</HintPath>
@@ -43,6 +44,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -51,11 +53,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BindingPicture.cs" />
     <Compile Include="Model\MPPhotoSlideshowModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Images\icon.ico" />
+    <Content Include="Setup\SlideshowTemplates.xml" />
     <Content Include="Skin\default\images\mpslideshow_background.png" />
     <Content Include="Language\strings_en.xml">
       <SubType>Designer</SubType>
@@ -64,7 +68,6 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Setup\LicenseAccessible.txt" />
-    <Content Include="Setup\MPSlideshowTemplates.xml" />
     <Content Include="Setup\Setup-en-us.wxl" />
     <Content Include="Setup\Setup.wxs">
       <SubType>Designer</SubType>
@@ -79,7 +82,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Skin\default\screens\mp_photo_slideshow.xaml">
+    <None Include="Skin\default\screens\mp_photo_slideshow_old.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </None>
@@ -90,7 +93,12 @@
       <Name>MPPhotoSlideshowCommon</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Skin\default\screens\mp_photo_slideshow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>call "$(ProjectDir)Debug\devinstall.cmd" $(ConfigurationName) $(FullyQualifiedOutputPath)"
